compiler/lume_parse/src/snapshots/lume_parse__tests__is_snapshots@variant.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 is Foo::A;\")"
---
SOURCE_FILE@0..10
  EXPR_STMT@0..10
    IS_EXPR@0..9
      LITERAL@0..1
        INTEGER_LIT@0..1 "0"
      IS_KW@1..3 "is"
      PAT@3..9
        PAT_VARIANT@3..9
          PATH@3..9
            PATH_TYPE@3..6
              IDENT@3..6 "Foo"
            PATH_SEP@6..8 "::"
            PATH_VARIANT@8..9
              IDENT@8..9 "A"
    SEMICOLON@9..10 ";"
