compiler/lume_parse/src/snapshots/lume_parse__tests__is_snapshots@variant_backed.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 is Foo::A(a, b);\")"
---
SOURCE_FILE@0..18
  EXPR_STMT@0..18
    IS_EXPR@0..17
      LIT_EXPR@0..1
        LITERAL@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      IS_KW@2..4 "is"
      WHITESPACE@4..5 " "
      PAT@5..17
        PAT_VARIANT@5..17
          PATH@5..11
            PATH_SEGMENT@5..8
              PATH_TYPE@5..8
                NAME@5..8
                  IDENT@5..8 "Foo"
            PATH_SEP@8..10 "::"
            PATH_SEGMENT@10..11
              PATH_VARIANT@10..11
                NAME@10..11
                  IDENT@10..11 "A"
          LEFT_PAREN@11..12 "("
          PAT@12..13
            PAT_IDENT@12..13
              PATH@12..13
                PATH_SEGMENT@12..13
                  PATH_NAMESPACE@12..13
                    NAME@12..13
                      IDENT@12..13 "a"
          COMMA@13..14 ","
          WHITESPACE@14..15 " "
          PAT@15..16
            PAT_IDENT@15..16
              PATH@15..16
                PATH_SEGMENT@15..16
                  PATH_NAMESPACE@15..16
                    NAME@15..16
                      IDENT@15..16 "b"
          RIGHT_PAREN@16..17 ")"
    SEMICOLON@17..18 ";"
