compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@bool_false.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"false;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    LITERAL@0..5
      BOOLEAN_LIT@0..5 "false"
    SEMICOLON@5..6 ";"
