compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@ident.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"ident;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    VARIABLE_EXPR@0..5
      NAME@0..5
        IDENT@0..5 "ident"
    SEMICOLON@5..6 ";"
