compiler/lume_parse/src/snapshots/lume_parse__tests__literal_snapshots@int.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0;\")"
---
SOURCE_FILE@0..2
  EXPR_STMT@0..2
    LITERAL@0..1
      INTEGER_LIT@0..1 "0"
    SEMICOLON@1..2 ";"
